[gd_scene load_steps=3 format=3 uid="uid://d3s12v0bktaus"]

[ext_resource type="Script" path="res://scripts/room_area.gd" id="1_hn85f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frlj1"]
size = Vector2(175, 175)

[node name="RoomArea" type="Area2D" groups=["Rooms"]]
script = ExtResource("1_hn85f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12.5, -62.5)
shape = SubResource("RectangleShape2D_frlj1")

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
